# AccountStatementGenerator

./: README.md  pyproject.toml
src/: prompt.md  step1.py  step2.py
